--- a/css/style.css
+++ b/css/style.css
@@ -68,12 +68,6 @@ ul {
 	list-style-type: none;
 }
 
-/*
-.incident-description {
-	display: none;
-}
-*/
-
 .incident-date {
 	width: 15%;
 }
@@ -92,5 +86,15 @@ ul {
 * {
 	border: 1px solid black;
 	padding: 3px;
+}
+*/
+
+/*
+.btn-supprimer {
+	position: absolute;
+	right: 50px;
+	margin-top: 5px;
+	padding: 2px;
+	background-color: pink;
 }
 */
